Fix delay in opening navigation menu on mobile

--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -26,7 +26,6 @@ nav {
 	}
 
 	div {
-		@extend .collapse;
 		@extend .navbar-collapse;
 		@extend .justify-content-end;
 	}
